# tourism-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/mental-models/: apiqroo-data.yaml  cruise-industry.yaml  data-pipeline.yaml
.playwright-mcp/: page-2026-04-15T23-59-01-170Z.yml  page-2026-04-16T00-03-32-770Z.yml
dashboards/: app.py
dashboards/components/: kpi_cards.py
dashboards/pages/: 01_Hoy.py  02_Historico.py  03_Mapa.py
docker/: Dockerfile
scripts/: create_supabase_tables.sql  seed_historical.py  seed_ships.py  seed_weather.py  update_gap.py
specs/001-cruise-monitor-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cruise-monitor-mvp/checklists/: requirements.md
specs/001-cruise-monitor-mvp/contracts/: data_pipeline.contract.md
src/collectors/: ais_stream.py  apiqroo.py
src/db/: client.py  queries.py
src/pipeline/: orchestrator.py
src/pipeline/hooks/: pre_store_validation.py
src/processors/: cleaner.py  enricher.py  load_factor.py
